default/objects/success__Insight__c/success__Insight__c.object-meta.xml
<CustomObject>
    <description>Insight records are generated from Observations that can then be used for reporting purposes and for Opportunity Insight to provide the performance analysis capabilities and to drive predictions.</description>
    <label>Insight</label>
    <nameField>
        <displayFormat>BA-{00000}</displayFormat>
        <label>Insight Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Insights</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>