default/objects/success__Insight__c/fields/success__Case_Safe_Related_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>success__Case_Safe_Related_Record_Id__c</fullName>
    <formula>CASESAFEID(success__Related_Record_ID__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Safe Related Record Id</label>
    <type>Text</type>
</CustomField>