default/objects/success__Insight__c/fields/success__Category__c.field-meta.xml
<CustomField>
    <fullName>success__Category__c</fullName>
    <description>Allows for further categorisation for Insight and Reporting purposes</description>
    <formula>success__Base_Behaviour__r.success__Category__c</formula>
    <inlineHelpText>Allows for further categorisation for Insight and Reporting purposes</inlineHelpText>
    <label>Category</label>
    <type>Text</type>
</CustomField>