default/objects/success__Insight__c/fields/success__Count__c.field-meta.xml
<CustomField>
    <fullName>success__Count__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Function Limit Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>