default/objects/success__Insight__c/fields/success__Exceeds_Function_Limit__c.field-meta.xml
<CustomField>
    <fullName>success__Exceeds_Function_Limit__c</fullName>
    <formula>AND(NOT(ISBLANK(success__Base_Behaviour__r.success__Repetition_Limit__c)),success__Count__c &gt; success__Base_Behaviour__r.success__Repetition_Limit__c)</formula>
    <label>Exceeds Function Limit</label>
    <type>Checkbox</type>
</CustomField>