default/objects/success__Insight__c/fields/success__Function_Value__c.field-meta.xml
<CustomField>
    <fullName>success__Function_Value__c</fullName>
    <label>Function Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>