default/objects/success__Insight__c/fields/success__Hour__c.field-meta.xml
<CustomField>
    <fullName>success__Hour__c</fullName>
    <formula>VALUE( MID( TEXT( success__Occurrence_Date__c ), 12, 2 ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hour</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>