default/objects/success__Insight__c/fields/success__Identifier__c.field-meta.xml
<CustomField>
    <fullName>success__Identifier__c</fullName>
    <externalId>true</externalId>
    <label>Identifier</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>