default/objects/success__Insight__c/fields/success__Insight_Source__c.field-meta.xml
<CustomField>
    <fullName>success__Insight_Source__c</fullName>
    <description>A hyperlink to the source record that triggered the generation of the insight</description>
    <formula>IF (LEN( success__Record_ID__c )&lt;1, NULL, HYPERLINK(&quot;/&quot; &amp; success__Record_ID__c, &quot;Link to Record&quot;,&quot;_parent&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Hyperlink to the source record that generated the insight</inlineHelpText>
    <label>Insight Source</label>
    <type>Text</type>
</CustomField>