default/objects/success__Insight__c/fields/success__Meets_Function_Value__c.field-meta.xml
<CustomField>
    <fullName>success__Meets_Function_Value__c</fullName>
    <formula>success__Function_Value__c &gt;= success__Base_Behaviour__r.success__Number_of_occurrences__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Meets Function Value</label>
    <type>Checkbox</type>
</CustomField>