default/objects/success__Insight__c/fields/success__Related_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>success__Related_Record_ID__c</fullName>
    <label>Related Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>