default/objects/success__Insight__c/fields/success__Report_Week_Year__c.field-meta.xml
<CustomField>
    <fullName>success__Report_Week_Year__c</fullName>
    <formula>YEAR( DATEVALUE(success__Occurrence_Date__c) + (MOD(8- MOD( DATEVALUE(success__Occurrence_Date__c) - DATE(1900, 1, 7), 7)+1 ,7)-3))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Report Week Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>