default/objects/success__Insight__c/fields/success__Started_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>success__Started_Date_Time__c</fullName>
    <label>Started</label>
    <type>DateTime</type>
</CustomField>