default/objects/success__Insight__c/fields/success__Status_Formula__c.field-meta.xml
<CustomField>
    <fullName>success__Status_Formula__c</fullName>
    <formula>IF(success__Base_Behaviour__c!=null,

  IF(ISNULL(success__Base_Behaviour__r.success__Aggregate_Field__c), 1,
      IF(AND(ISNULL(success__Time_Limit__c), !success__Meets_Function_Value__c),2,
        IF(NOW() &lt;  success__Time_Limit__c ,2,
          IF(AND(!success__Meets_Function_Value__c, NOW()  &gt;=  success__Time_Limit__c ), -1,
            IF(success__Exceeds_Function_Limit__c, -1, 1)
          )
        )
      )
  )

,-2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>