default/objects/success__Insight__c/fields/success__Status_Label__c.field-meta.xml
<CustomField>
    <fullName>success__Status_Label__c</fullName>
    <formula>CASE( success__Status_Formula__c , -1, &quot;Failed&quot;, 1, &quot;Awarded&quot;, 2, &quot;In Progress&quot;, &quot;Invalid&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>