default/objects/success__Insight__c/fields/success__Time_Limit__c.field-meta.xml
<CustomField>
    <fullName>success__Time_Limit__c</fullName>
    <label>Time Limit</label>
    <type>DateTime</type>
</CustomField>