default/objects/success__Insight__c/fields/success__Type__c.field-meta.xml
<CustomField>
    <fullName>success__Type__c</fullName>
    <formula>success__Base_Behaviour__r.success__Badge_Type__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type</label>
    <type>Text</type>
</CustomField>