default/objects/success__Insight__c/fields/success__Week__c.field-meta.xml
<CustomField>
    <fullName>success__Week__c</fullName>
    <formula>FLOOR(( DATEVALUE(success__Occurrence_Date__c) - DATE( success__Report_Week_Year__c ,1,1) +
MOD(
(MOD( DATE(success__Report_Week_Year__c,1,1) - DATE(1900, 1, 7), 7)+1)
+1,7)-3) / 7 + 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>