default/objects/success__Insight__c/listViews/success__All.listView-meta.xml
<ListView>
    <fullName>success__All</fullName>
    <columns>NAME</columns>
    <columns>success__User__c</columns>
    <columns>success__Base_Behaviour__c</columns>
    <columns>success__Type__c</columns>
    <columns>success__Status_Label__c</columns>
    <columns>success__Function_Value__c</columns>
    <columns>success__Occurrence_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>